# cuda-oxide

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: fmt.yml  unit-tests.yml
crates/cargo-oxide/src/: backend.rs  commands.rs  main.rs
crates/cuda-core/src/: device_buffer.rs
crates/cuda-core/tests/: device_buffer.rs
crates/cuda-device/src/: constant.rs  debug.rs  wmma.rs
crates/cuda-host/: Cargo.toml  README.md
crates/cuda-host/src/: launch.rs  lib.rs  ltoir.rs  ltoir_cache.rs  type_id.rs
crates/cuda-host/tests/: cuda_module_api.rs
crates/cuda-intrinsics-gen/src/: main.rs  probe.rs  render.rs  resolve.rs
crates/cuda-macros/: Cargo.toml  README.md
crates/cuda-macros/src/: lib.rs
crates/cuda-macros/tests/: macro_guard.rs
crates/cuda-macros/tests/compile_fail/: async_launch_macro_requires_unsafe.rs  cuda_module_duplicate_nested_kernel.rs  cuda_module_duplicate_nested_kernel.stderr  cuda_module_file_kernel_boundary.rs  cuda_module_file_kernel_boundary.stderr  cuda_module_impl_trait_parameter.rs  cuda_module_impl_trait_parameter.stderr  cuda_module_include_kernel_boundary.rs  cuda_module_include_kernel_boundary.stderr  cuda_module_include_kernel_boundary_items.rs  cuda_module_nested_type_mismatch.rs  cuda_module_nested_type_mismatch.stderr  cuda_module_pub_super_scope.rs  cuda_module_pub_super_scope.stderr  cuda_module_raw_duplicate_kernel.rs  cuda_module_raw_duplicate_kernel.stderr  cuda_module_raw_loaded_module.rs  cuda_module_raw_loaded_module.stderr  cuda_module_reserved_from_parent.rs  cuda_module_reserved_from_parent.stderr  device_impl_trait_parameter.rs  device_impl_trait_parameter.stderr  kernel_impl_trait_parameter.rs  kernel_impl_trait_parameter.stderr  kernel_instantiation_on_non_generic.rs  kernel_instantiation_on_non_generic.stderr  kernel_legacy_const_instantiation.rs  kernel_legacy_const_instantiation.stderr  kernel_legacy_lifetime_instantiation.rs  kernel_legacy_lifetime_instantiation.stderr  launch_requires_unsafe.rs  launch_requires_unsafe.stderr
crates/cuda-macros/tests/pass/: async_launch_macro_in_unsafe.rs  const_generic_hygiene.rs  cuda_module_inline_namespaces.rs  cuda_module_inline_namespaces_include.rs
crates/cuda-oxide-codegen/src/: lower.rs  pipeline.rs
crates/cuda-oxide-codegen/tests/: compile_to_ptx.rs
crates/dialect-llvm/: Cargo.toml
crates/dialect-llvm/src/: lib.rs
crates/dialect-llvm/tests/: export_test.rs  ops_test.rs
crates/dialect-mir/: README.md
crates/dialect-mir/src/: attributes.rs  types.rs
crates/dialect-mir/src/ops/: cast.rs  control_flow.rs  debug.rs  enum_ops.rs  memory.rs
crates/dialect-mir/tests/: ops_test.rs
crates/dialect-nvvm/src/ops/: debug.rs  wmma.rs
crates/dialect-nvvm/tests/: ops_test.rs
crates/libnvvm-sys/src/: lib.rs
crates/llvm-export/src/: lib.rs
crates/llvm-export/src/export/: debug.rs  externs.rs  function.rs  module.rs  names.rs  ops.rs  types.rs
crates/llvm-export/tests/: export_test.rs
crates/mir-importer/src/: pipeline.rs
crates/mir-importer/src/translator/: body.rs  layout.rs  mod.rs  rvalue.rs  statement.rs  types.rs
crates/mir-lower/: Cargo.toml
crates/mir-lower/src/: lib.rs  lowering.rs
crates/mir-lower/src/convert/: interface_impls.rs  type_interface_impls.rs  types.rs
crates/mir-lower/tests/: lowering_test.rs
crates/nvjitlink-sys/src/: lib.rs
crates/nvvm-transforms/src/: legalize.rs  lib.rs
crates/rustc-codegen-cuda/: Cargo.toml  STATUS.md
crates/rustc-codegen-cuda/examples/const_generic/: Cargo.toml  README.md
crates/rustc-codegen-cuda/examples/cross_crate_kernel/: README.md
crates/rustc-codegen-cuda/examples/cuda_module_in_lib/: README.md
crates/rustc-codegen-cuda/examples/cuda_module_nested/: Cargo.toml  README.md
crates/rustc-codegen-cuda/examples/cuda_module_nested/src/: main.rs
crates/rustc-codegen-cuda/examples/device_closures/: README.md
crates/rustc-codegen-cuda/examples/error_enum_shared_pointer_layout/: Cargo.toml  README.md
crates/rustc-codegen-cuda/examples/error_enum_shared_pointer_layout/src/: main.rs
crates/rustc-codegen-cuda/examples/export_name_policy/: Cargo.toml
crates/rustc-codegen-cuda/examples/export_name_policy/src/: main.rs
crates/rustc-codegen-cuda/examples/issue98_repro/: Cargo.toml
crates/rustc-codegen-cuda/examples/issue98_repro/src/: main.rs
crates/rustc-codegen-cuda/examples/option_ref_transmute/: Cargo.toml
crates/rustc-codegen-cuda/examples/option_ref_transmute/src/: main.rs
crates/rustc-codegen-cuda/examples/padded_constants/: Cargo.toml
crates/rustc-codegen-cuda/examples/padded_constants/src/: main.rs
crates/rustc-codegen-cuda/examples/step_by/: Cargo.toml
crates/rustc-codegen-cuda/examples/step_by/src/: main.rs
crates/rustc-codegen-cuda/src/: collector.rs  device_codegen.rs
cuda-oxide-book/appendix/: supported-features.md
cuda-oxide-book/compiler/: lowering-pipeline.md
cuda-oxide-book/gpu-programming/: closures-and-generics.md  error-handling-and-debugging.md
scripts/: smoketest.sh
(+74 files in other folders)
