[package]
name = "cuda_module_nested"
version = "0.1.0"
edition = "2024"
authors = ["Nihal Pasham <nihalp@nvidia.com>"]
license = "Apache-2.0"

# Mark as standalone crate (not part of parent workspace)
[workspace]

# This example demonstrates namespace-local launchers for kernels in nested
# inline modules. Build with:
#   cargo oxide run cuda_module_nested

[dependencies]
# Device-side intrinsics (thread indexing, barriers, etc.)
cuda-device = { path = "../../../cuda-device" }

# Host-side utilities (CudaKernel trait, etc.)
cuda-host = { path = "../../../cuda-host" }

# Host-side CUDA runtime
cuda-core = { path = "../../../cuda-core" }
