[package]
name = "error_enum_shared_pointer_layout"
version = "0.1.0"
edition = "2024"
authors = ["NVIDIA Corporation"]
license = "Apache-2.0"

[workspace]

[dependencies]
cuda-core = { path = "../../../cuda-core" }
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host" }
