# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "export_name_policy"
version = "0.1.0"
edition = "2024"
authors = ["Nihal Pasham <nihalp@nvidia.com>"]
license = "Apache-2.0"

[workspace]

[dependencies]
cuda-core = { path = "../../../cuda-core" }
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host" }
