[package]
name = "issue98_repro"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

# Mark as standalone crate (not part of parent workspace)
[workspace]

# Repro for issue #98: libdevice calls (__nv_expf) auto-switch the device
# pipeline into NVVM IR mode; the emitted opaque-pointer NVVM IR is rejected
# by libNVVM with "parse expected type" for pre-Blackwell archs (sm_86 etc).
# Build with:
#   cargo oxide build issue98_repro --arch sm_90 -v

[dependencies]
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host" }
cuda-core = { path = "../../../cuda-core" }
