[package]
name = "option_ref_transmute"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace]

# Sibling of `step_by` for issue #21. Exercises the *pointer-source* form of
# the same niched-enum Transmute: rustc stores `Option<&T>` as a single
# pointer (null = None, non-null = Some(&T)). cuda-oxide now keeps that exact
# physical representation, so the pointer-to-enum `Cast(Transmute)` must
# preserve the pointer slot rather than treating the destination like a fat
# pointer or inventing a separate enum tag.
#
# Run with:
#   cargo oxide run option_ref_transmute

[dependencies]
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host" }
cuda-core = { path = "../../../cuda-core" }
