#
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#

[package]
name = "padded_constants"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace]

# Regression coverage for MIR import of aggregate constants whose fields are not
# packed in declaration order:
# - struct constants rustc pads (`{ u8, u64 }`) or reorders,
# - tuple constants with the same shape,
# - a nested padded struct,
# - a padded struct with a float field,
# - descending-alignment layouts, which need neither padding nor reordering.
#
# Run with:
#   cargo oxide run padded_constants

[dependencies]
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host" }
cuda-core = { path = "../../../cuda-core" }
