[package]
name = "step_by"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace]

# Regression example for issue #21.
#
# Exercises a `for i in (a..b).step_by(s)` loop. The `StepBy` adapter holds
# its `step` as a `NonZeroUsize`, which `core` encodes via `TyKind::Pat`,
# and rustc emits a Transmute involving the one-word, niche-optimised
# `Option<NonZeroUsize>` representation when inlining `StepBy::next`.
#
# Before the original fix, cuda-oxide's synthetic enum representation caused
# an invalid scalar-to-aggregate LLVM bitcast. The current compiler instead
# retains rustc's physical niche carrier and uses a size-checked Transmute.
# Run with:
#   cargo oxide run step_by

[dependencies]
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host" }
cuda-core = { path = "../../../cuda-core" }
